# django-app

./: Dockerfile  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
